# VAL_protocol

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_demo.txt  CMakePresets.json  CONTRIBUTING.md  DEVELOPMENT.md  PROJECT_STRUCTURE.md  PROTOCOL_FLOW.md  README.md
docs/: CHANGELOG.md  README.md  api-reference.md  getting-started.md  implementation-guide.md  message-formats.md  metadata_validation.md  protocol-specification.md  troubleshooting.md
docs/examples/: advanced-features.md  basic-usage.md  integration-examples.md
examples/tcp/: val_example_receive.c  val_example_receive_com.c  val_example_receive_tcp.c  val_example_send.c  val_example_send_com.c  val_example_send_tcp.c
examples/tcp/common/: tcp_util.c  tcp_util.h
include/: val_byte_order.h  val_error_strings.h  val_errors.h  val_protocol.h  val_scheduler.h  val_wire.h
scripts/: run_com_pair.sh
src/: val_core.c  val_error_strings.c  val_internal.h  val_receiver.c  val_sender.c  val_wire.c
unit_tests/: CMakeLists.txt
unit_tests/core/: test_adaptive_deescalate.c  test_adaptive_demo.c  test_adaptive_escalate.c  test_adaptive_reescalate.c  test_adaptive_timeouts.c  test_adaptive_transmission.c  test_clock_requirement.c  test_error_system.c  test_initial_mode_negotiation.c  test_metadata_validation.c  test_metrics.c  test_metrics_crc.c  test_metrics_rtt.c  test_metrics_timeout.c  test_packet_negotiation.c  test_streaming_ack_cadence.c  test_streaming_allowed.c  test_streaming_veto.c  test_transport_fragmentation.c  test_transport_optional.c  test_transport_reorder_jitter.c  test_wire_audit.c  test_wire_big_endian_sim.c  test_wire_roundtrip.c
unit_tests/integration/: test_tcp_multi.c  test_tcp_single.c
unit_tests/recovery/: suite_recovery_check.c  test_corruption.c  test_resume.c  test_resume_modes.c  test_resume_policies.c  test_resume_with_validation.c
unit_tests/send_receive/: suite_send_receive_check.c  test_cancel_mid_data_receiver.c  test_cancel_mid_data_sender.c  test_multi_file.c  test_single_file.c
unit_tests/support/: test_support.c  test_support.h  transport_profiles.c  transport_profiles.h
unit_tests/transport/: test_satellite_diagnostic.c  test_satellite_profile.c  test_timebound_failures.c  test_transport_stress.c  test_uart_profile.c  test_wifi_profile.c
